tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_parser_flags_r.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - parser
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::cache::ParseCache
crate::constants::{PATH_QUALIFIER_CRATE, PATH_QUALIFIER_SELF, PATH_QUALIFIER_SUPER}
crate::parser::visitor
crate::parser::visitor::ModuleVisitor
crate::reference::GroupItem::Aliased
crate::reference::GroupItem::Glob
crate::reference::GroupItem::Simple
crate::reference::PathPrefix::None
crate::reference::PathPrefix::Super
crate::reference::{GroupItem, PathPrefix, TypeReference}
crate::reference::{PathPrefix, TypeReference}
crate::utils::has_cfg_test
crate::utils::{ReadFileError, descend_inline_module, read_source_file}

----- stderr -----
