tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_parser_flags_r_t.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - parser
    - "-r"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::analyzer::expand_groups
crate::cache::ParseCache
crate::constants::{PATH_QUALIFIER_CRATE, PATH_QUALIFIER_SELF, PATH_QUALIFIER_SUPER}
crate::parser::*
crate::parser::visitor
crate::parser::visitor::*
crate::parser::visitor::ModuleVisitor
crate::reference::GroupItem
crate::reference::GroupItem::Aliased
crate::reference::GroupItem::Glob
crate::reference::GroupItem::Simple
crate::reference::PathPrefix
crate::reference::PathPrefix::Crate
crate::reference::PathPrefix::None
crate::reference::PathPrefix::Super
crate::reference::PathSuffix::Group
crate::reference::{GroupItem, PathPrefix, TypeReference}
crate::reference::{PathPrefix, TypeReference}
crate::utils::ReadFileError::TooLarge
crate::utils::has_cfg_test
crate::utils::{MAX_FILE_BYTES, ReadFileError}
crate::utils::{ReadFileError, descend_inline_module, read_source_file}

----- stderr -----
