tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_parser_flags_r_t_e_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - parser
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::analyzer::expand_groups
crate::cache::ParseCache
crate::constants::PATH_QUALIFIER_CRATE
crate::constants::PATH_QUALIFIER_SELF
crate::constants::PATH_QUALIFIER_SUPER
crate::parser::AnalyzerError
crate::parser::CrateAnalyzer
crate::parser::Result
crate::parser::visitor
crate::parser::visitor::CollectedReferences
crate::parser::visitor::ModuleVisitor
crate::parser::visitor::resolve_reference
crate::reference::GroupItem
crate::reference::GroupItem::Aliased
crate::reference::GroupItem::Glob
crate::reference::GroupItem::Simple
crate::reference::PathPrefix
crate::reference::PathPrefix::Crate
crate::reference::PathPrefix::None
crate::reference::PathPrefix::Super
crate::reference::PathSuffix::Group
crate::reference::TypeReference
crate::utils::MAX_FILE_BYTES
crate::utils::ReadFileError
crate::utils::ReadFileError::TooLarge
crate::utils::descend_inline_module
crate::utils::has_cfg_test
crate::utils::read_source_file

----- stderr -----
