tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_parser_flags_r_t_e_format_grouped_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - parser
    - "-r"
    - "-t"
    - "-e"
    - "--format"
    - grouped
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
parser
 - crate::cache::ParseCache
 - crate::parser::visitor
 - crate::parser::visitor::ModuleVisitor
 - crate::reference::PathPrefix
 - crate::reference::TypeReference
 - crate::utils::ReadFileError
 - crate::utils::descend_inline_module
 - crate::utils::read_source_file
parser::tests
 - crate::analyzer::expand_groups
 - crate::parser::AnalyzerError
 - crate::parser::CrateAnalyzer
 - crate::parser::Result
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathPrefix::Crate
 - crate::reference::PathPrefix::Super
 - crate::reference::PathSuffix::Group
 - crate::utils::MAX_FILE_BYTES
 - crate::utils::ReadFileError
 - crate::utils::ReadFileError::TooLarge
parser::visitor
 - crate::constants::PATH_QUALIFIER_CRATE
 - crate::constants::PATH_QUALIFIER_SELF
 - crate::constants::PATH_QUALIFIER_SUPER
 - crate::reference::GroupItem
 - crate::reference::GroupItem::Aliased
 - crate::reference::GroupItem::Glob
 - crate::reference::GroupItem::Simple
 - crate::reference::PathPrefix
 - crate::reference::PathPrefix::None
 - crate::reference::PathPrefix::Super
 - crate::reference::TypeReference
 - crate::utils::has_cfg_test
parser::visitor::tests
 - crate::parser::visitor::CollectedReferences
 - crate::parser::visitor::ModuleVisitor
 - crate::parser::visitor::resolve_reference

----- stderr -----
