tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_parser_flags_r_t_e_g_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - parser
    - "-r"
    - "-t"
    - "-e"
    - "-g"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
parser
 - crate::reference::TypeReference
parser::tests
 - crate::parser::AnalyzerError
 - crate::parser::CrateAnalyzer
 - crate::parser::Result
 - crate::reference::PathPrefix
parser::visitor
 - crate::constants::ATTR_CFG
 - crate::constants::MODULE_NAME_TEST
 - crate::constants::PATH_QUALIFIER_CRATE
 - crate::constants::PATH_QUALIFIER_SELF
 - crate::constants::PATH_QUALIFIER_SUPER
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::reference::TypeReference

----- stderr -----
