tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_parser_flags_t.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - parser
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::{ATTR_CFG, MODULE_NAME_TEST, PATH_QUALIFIER_CRATE, PATH_QUALIFIER_SELF, PATH_QUALIFIER_SUPER}
crate::parser::*
crate::reference::{GroupItem, PathPrefix, PathSuffix, TypeReference}

----- stderr -----
