tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_parser_flags_t_e.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - parser
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::cache::ParseCache
crate::parser::*
crate::reference::PathPrefix
crate::reference::TypeReference
crate::utils::MAX_FILE_BYTES
crate::utils::ReadFileError
crate::utils::descend_inline_module
crate::utils::read_source_file

----- stderr -----
